[package]
name = "lang-cli"
version = "0.1.2-dev"
edition = "2021"
authors = ["JDDev0 <jddev0@dorneger.at>"]
description = "CLI interface for the langRS implementation of the Lang Programmng Language"
repository = "https://github.com/JDDev0/lang-cli-rs"
license = "MIT"
readme = "README.md"
keywords = ["lang", "lang-interpreter"]
categories = ["command-line-utilities"]

[[bin]]
name = "lang"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lang-interpreter = "0.0.3"
